<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">ODK Core Services</string>
	
    <string name="core_notice">ODK Core Services provides database and file access services to all ODK 2.0 applications.</string>
    <string name="action_settings">Settings</string>
	
</resources>
