...
    <string name="app_name">ODK-X Services</string>

    <string name="services_notice">ODK-X Services provides database, file access, and data synchronization services to all ODK-X applications.</string>
    <string name="action_admin_settings">Admin Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_sync">Sync</string>
    <!--<string name="action_logout">Logout</string>-->
    <string name="action_change_user">Change User/Logout</string>
    <string name="action_resolve_conflict">Resolve Conflicts</string>
    <string name="action_verify_server_settings">Update User Permissions</string>

    <!-- Checkpoint and Conflict Resolution Stuff -->
...
    <string name="sync_auth_account">Authorize account</string>
    <string name="sync_instance_files">Sync Instance Attachments</string>
    <string name="sync_defer_instance_files">Defer Instance Attachments</string>
    <string name="sync_start">Sync now</string>
    <string name="sync_reset_server">Reset App Server</string>
    <string name="last_sync">Last Sync</string>
    <string name="last_sync_not_available">Not Available</string>
    <string name="sync_confirm_change_settings">Confirm Change Settings</string>
    <string name="sync_change_settings_warning">If you change your settings, tables you have sync\'d now may no longer be able to be sync\'d.</string>
    <string name="sync_save">Save</string>

    <string name="sync_choose_account">Please choose an account</string>
    <string name="sync_waiting_auth">Waiting on authentication</string>
...
    <string name="main_activity_username_label">Username of User :</string>
    <string name="main_activity_last_synced_time_label">Last Synced Time</string>
    <string name="toolbar_item_sync">Sync</string>
    <string name="toolbar_item_verify">Verify Server Details</string>
    <string name="toolbar_item_settings">Settings</string>

    <string name="drawer_sign_in_button_text">Sign-In </string>
    <string name="drawer_sign_out_button_text">Sign-Out </string>
    <string name="drawer_item_merge_conflicts">Merge Conflicts</string>
    <string name="drawer_item_update_credentials">Verify Permissions</string> <!-- Previously " Update Credentials" -->
    <string name="drawer_item_switch_sign_in_type">Switch Sign In</string>
    <string name="drawer_item_sign_out">Sign out</string>
    <string name="drawer_item_sign_in">Sign in</string>
    <string name="drawer_item_about_us">About ODK-X</string>
    <string name="drawer_item_docs">ODK-X Docs</string>

    <string name="authenticated_user">Authenticated User</string>
    <string name="anonymous_user">Anonymous</string>
    <string name="logged_out">Logged Out</string>
    <string name="enter_server_url">Enter Server URL</string>
    <string name="update_url">Update Url</string>
    <string name="choose_demo_server">Choose Demo Server</string>
    <string name="verify_server_details">Verify Server Details</string>
    <string name="scan_qr">Scan QR</string>
    <string name="enter_password">Password</string>
...
    <string name="not_verified">Not Verified</string>
    <string name="not_known_yet">Not Known Yet</string>
    <string name="allowed">Allowed</string>
    <string name="not_allowed">Not Allowed</string>
    <string name="user_logged_out_label">User is Logged Out</string>
    <string name="user_anonymous_label">User is Anonymous</string>
    <string name="switch_sign_in_type">Switch Sign In Type</string>
    <string name="sign_in_using_credentials">Sign in using Credentials</string>
    <string name="set_credentials">Set Credentials</string>
    <string name="sign_in_as_anonymous">Sign in as Anonymous User</string>
    <string name="services_gif">Service GIF</string>

</resources>

