...
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/portrait_regular_margin"
        android:layout_marginTop="@dimen/portrait_label_field_margin"
        android:layout_marginEnd="@dimen/portrait_regular_margin"
        android:layout_marginBottom="@dimen/portrait_regular_margin"
        android:text="@string/default_sync_server_url"
        app:layout_constraintBottom_toTopOf="@+id/tvTitleLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvServerUrlLabelLogin" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitleLogin"
...
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/portrait_regular_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvServerUrlLogin"
        app:layout_constraintBottom_toTopOf="@+id/inputUsernameLogin"
        />


    <androidx.appcompat.widget.AppCompatTextView
        style="@style/InputFieldLabelStyle"
        android:layout_width="wrap_content"
...
        style="@style/TextInputTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/portrait_regular_margin"
        android:padding="8dp"
        android:hint="@string/enter_password"
        app:layout_constraintBottom_toTopOf="@+id/btnAuthenticateUserLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUsernameLogin"
        app:passwordToggleEnabled="true">

...
