...
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/portrait_regular_margin"
                android:layout_marginTop="@dimen/portrait_regular_margin"
                android:layout_marginEnd="@dimen/portrait_regular_margin"
                android:layout_marginBottom="@dimen/portrait_label_field_margin"
                android:text="@string/main_activity_current_user_state_label"
                app:layout_constraintBottom_toTopOf="@+id/tvUserStateMain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvServerUrlMain" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserStateMain"
...
        android:layout_marginStart="@dimen/portrait_regular_margin"
        android:layout_marginTop="@dimen/portrait_regular_margin"
        android:layout_marginEnd="@dimen/portrait_label_field_margin"
        android:layout_marginBottom="@dimen/portrait_regular_margin"
        android:text="@string/main_activity_username_label"
        app:layout_constraintBottom_toTopOf="@+id/tvLastSyncTimeLabelMain"
        app:layout_constraintEnd_toStartOf="@+id/tvUsernameMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mcvMainDetails" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvUsernameMain"
        style="@style/TextViewStyle"
...
        android:layout_marginStart="@dimen/portrait_regular_margin"
        android:layout_marginTop="@dimen/portrait_regular_margin"
        android:layout_marginEnd="@dimen/portrait_regular_margin"
        android:layout_marginBottom="@dimen/portrait_label_field_margin"
        android:text="@string/main_activity_last_synced_time_label"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/tvLastSyncTimeMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsernameLabelMain" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLastSyncTimeMain"
...
        android:layout_marginStart="@dimen/portrait_regular_margin"
        android:layout_marginTop="@dimen/portrait_label_field_margin"
        android:layout_marginEnd="@dimen/portrait_regular_margin"
        android:layout_marginBottom="@dimen/portrait_regular_margin"
        android:text="@string/last_sync_not_available"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnSignInMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLastSyncTimeLabelMain" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignInMain"
...
